Bug 491625 - lost last lysic word when use roll lysic(chinese)
Summary: lost last lysic word when use roll lysic(chinese)
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.07.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-12 14:37 UTC by qbit
Modified: 2024-10-29 20:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description qbit 2024-08-12 14:37:29 UTC
Operating System: Arch Linux 
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.2
Kernel Version: 6.10.3-zen1-2-zen (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5700G with Radeon Graphics
Memory: 61.6 GiB of RAM
Graphics Processor: AMD Radeon RX 6800 XT
not diplay last word when using roll lysic
like this:
[01:33.82][03:35.46]一如最初的模样
[03:06.81]烟花的瞬间
it will not display' 间' rather than '样'
Comment 1 Bug Janitor Service 2024-10-27 12:45:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/635
Comment 2 Jack Hill 2024-10-29 20:12:36 UTC
Git commit 4443955c80d7745fa4bb95e460de5a63bf209d50 by Jack Hill.
Committed on 29/10/2024 at 19:44.
Pushed by jackh into branch 'master'.

Fix displaying lyrics with no linebreak at the end

M  +5    -0    autotests/lyricsmodeltest.cpp
M  +14   -9    src/models/lyricsmodel.cpp

https://invent.kde.org/multimedia/elisa/-/commit/4443955c80d7745fa4bb95e460de5a63bf209d50