Fix displaying lyrics with no linebreak at the end

BUG: 491625